# aws-cost-saver

./: .gitignore  README.md  lambda_handler.py  pyproject.toml  requirements.txt
cli/: __init__.py  cost_saver.py
config/: environments.yaml
core/: __init__.py  aws_clients.py  cost_estimation.py  logging_config.py  resource_discovery.py  safety_checks.py  scheduler_engine.py
docs/: architecture.md  setup.md
scheduler/: eventbridge.json  eventbridge_rules.tf
scripts/: resize_ecs.py  scale_asg.py  start_ec2.py  start_rds.py  stop_ec2.py  stop_rds.py
terraform/: eventbridge.tf  iam_roles.tf  lambda_scheduler.tf  main.tf
tests/: __init__.py  test_cost_estimation.py  test_safety_checks.py  test_scheduler_engine.py
